--- a/ExpensesControlApp/Views/RegularExpense/Index.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="container p-3" id="temp">
     
     <div class="row pt-4">
-        <div class="col-6">
+        <div class="col">
             <h2 id="title" class="text-dark">Regular Expenses</h2>
         </div>
 
