--- a/ExpensesControlApp/Views/Shared/_ConfirmBar.cshtml
+++ b/ExpensesControlApp/Views/Shared/_ConfirmBar.cshtml
@@ -1,7 +1,7 @@
 ﻿<tr id="confirm-bar" style="display:none;">
     <td colspan="3"></td>
-    <td class="text-end">
-        <div class="d-flex flex-row justify-content-between">
+    <td>
+        <div class="d-none d-lg-flex flex-row justify-content-between">
             <p>Please Confirm</p>
             <form method="post" asp-action="Delete">
                 <input id="deleteId" name="deleteId" hidden />
@@ -12,7 +12,21 @@
                     <i class="fa fa-xmark"></i>
                 </a>
             </form>
+        </div>
 
+        <div class="d-lg-none d-flex flex-column justify-content-center text-center">
+            <p>Please Confirm</p>
+            <div class="row">
+                <form method="post" asp-action="Delete">
+                    <input id="deleteId" name="deleteId" hidden />
+                    <button type="submit" class="btn btn-outline-success mx-1">
+                        <i class="fa fa-check"></i>
+                    </button>
+                    <a class="btn btn-outline-danger mx-1" onclick="hideConfirm()">
+                        <i class="fa fa-xmark"></i>
+                    </a>
+                </form>
+            </div>
         </div>
     </td>
 </tr>
