--- a/ExpensesControlApp/Views/LimitParam/Index.cshtml
+++ b/ExpensesControlApp/Views/LimitParam/Index.cshtml
@@ -22,14 +22,12 @@
             </div>
             <partial name="_TimeSpanInput" for=TimeSpan />
         </div>
-        <div class="row my-4">
-            <div class="col-4 offset-4 row text-center">
-                <div class="col">
-                    <input id="submit" type="submit" class="btn btn-outline-success w-50" value="Save" />
-                </div>
-                <div class="col">
-                    <a class="btn btn-outline-danger w-50" asp-controller="ExpenseManager" asp-action="Index">Cancel</a>
-                </div>
+        <div class="d-flex justify-content-evenly text-center my-4">
+            <div class="col">
+                <input id="submit" type="submit" class="btn btn-outline-success w-50" value="Save" />
+            </div>
+            <div class="col">
+                <a class="btn btn-outline-danger w-50" asp-controller="ExpenseManager" asp-action="Index">Cancel</a>
             </div>
         </div>
 
