--- a/ExpensesControlApp/Views/RegularExpense/Update.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Update.cshtml
@@ -17,14 +17,12 @@
             <partial name="_ExpenseInput" for=Expense />
             <partial name="_TimeSpanInput" for=TimeSpan />
         </div>
-        <div class="row my-4">
-            <div class="col-4 offset-4 row text-center">
-                <div class="col">
-                    <input id="submit" type="submit" class="btn btn-outline-success w-50" value="Update" />
-                </div>
-                <div class="col">
-                    <a class="btn btn-outline-danger w-50" asp-action="Index">Cancel</a>
-                </div>
+        <div class="d-flex justify-content-evenly text-center my-4">
+            <div class="col">
+                <input id="submit" type="submit" class="btn btn-outline-success w-50" value="Update" />
+            </div>
+            <div class="col">
+                <a class="btn btn-outline-danger w-50" asp-action="Index">Cancel</a>
             </div>
         </div>
     </div>
