--- a/ExpensesControlApp/Views/Shared/_Layout.cshtml
+++ b/ExpensesControlApp/Views/Shared/_Layout.cshtml
@@ -7,42 +7,47 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ExpensesControlApp.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/lib/font-awesome/css/all.css"/>
-    <link rel="stylesheet" href="~/lib/jqueryui/jquery-ui.min.css"/>
-    
-    
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" />
+    <link rel="stylesheet" href="~/lib/jqueryui/jquery-ui.min.css" />
+
+
 </head>
 <body>
-    <header class="sticky-top">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            
-                <div class="d-flex flex-row justify-content-around w-100 px-5" >
-                    <ul class="navbar-nav">
-                        <li class="nav-item px-2">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ExpenseManager" asp-action="Index">Manage Expenses</a>
-                        </li>
-                        <li class="nav-item px-2">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="RegularExpense" asp-action="Index">Manage Regular Expenses</a>
-                        </li>
-                        <li class="nav-item px-2">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="LimitParam" asp-action="Index">Manage Expense Limit</a>
-                        </li>
-                    </ul>
-                    <div class="nav-item px-2 ml-auto mr-o" style="margin-left: auto; margin-right: 0;">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Back to Home Page</a>
-                        </div>
-                </div>
-            
-        </nav>
-    </header>
+    <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3">
+
+        <div class="container-fluid">
+            <div class="nav-item px-2">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                    <i class="fa-solid fa-house-chimney"></i>
+                </a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item px-2">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="ExpenseManager" asp-action="Index">Manage Expenses</a>
+                    </li>
+                    <li class="nav-item px-2">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="RegularExpense" asp-action="Index">Manage Regular Expenses</a>
+                    </li>
+                    <li class="nav-item px-2">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="LimitParam" asp-action="Index">Manage Expense Limit</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </nav>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer id="footer" class="border-top footer text-muted text-right" >
-       <div class="container" style="text-align: right;">
+    <footer id="footer" class="border-top footer text-muted text-right">
+        <div class="container" style="text-align: right;">
             <p>&copy; 2022 - ExpensesControlApp</p>
         </div>
     </footer>
