Updated views to look good on all screens

--- a/ExpensesControlApp/Views/ExpenseManager/Index.cshtml
+++ b/ExpensesControlApp/Views/ExpenseManager/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 @model ExpensesControlApp.ViewModels.ExpenseManagerViewModel
-<div class="container p-3">
+<div class="container col-10">
     <div class="row pt-4">
         <div class="col">
             <h2 id="title" class="text-dark">Expenses For @Model.TimeSpanOption.Name</h2>
