--- a/ExpensesControlApp/Views/RegularExpense/Create.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Create.cshtml
@@ -4,26 +4,29 @@
 }
 
 @model ExpensesControlApp.ViewModels.RegExpViewModel
+<div class="container col-10">
+    <form id="form" method="post">
+        <div class="border p-3 form-group">
+            <div class="row">
+                <h2 class="text-black-50 pl-3">Add Regular Expense</h2>
+            </div>
+            <div class="row">
+                <div class="d-flex flex-column align-items-center">
+                    <div class="col my-2">
+                        <partial name="_ExpenseInput" for=Expense />
+                        <partial name="_TimeSpanInput" for=TimeSpan />
+                    </div>
+                    <div class="col">
+                        <input id="submit-create" type="submit" class="btn btn-outline-success m-2" asp-action="Create" value="Create" />
 
-<form id="form" method="post">
-    <div class="border p-3 form-group">
-        <div class="row">
-            <h2 class="text-black-50 pl-3">Add Regular Expense</h2>
-        </div>
-        <div class="d-flex flex-column align-items-center">
-            <partial name="_ExpenseInput" for=Expense />
-            <partial name="_TimeSpanInput" for=TimeSpan />
-        </div>
-        <div class="d-flex justify-content-evenly text-center my-4">
-            <div class="col">
-                <input id="submit-create" type="submit" class="btn btn-outline-success w-50" asp-action="Create" value="Create" />
+                        <a class="btn btn-outline-danger m-2" asp-action="Index">Cancel</a>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-                <a class="btn btn-outline-danger w-50" asp-action="Index">Cancel</a>
-            </div>
+
         </div>
-    </div>
-</form>
+    </form>
+</div>
 @section MyScripts {
 <script>
     $('input[name="timespan"]').click(function(){
