--- a/ExpensesControlApp/Views/Shared/_DateInput.cshtml
+++ b/ExpensesControlApp/Views/Shared/_DateInput.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ExpensesControlApp.Models.ExpenseEntry
-<div class="col-5">
+
     <div class="input-group">
-        <div class="col-3 input-group-prepend">
-            <span class="input-group-text" id="addon-date">Date</span>
+        <div class="input-group-prepend w-25">
+            <span class="input-group-text w-100" id="addon-date">Date</span>
         </div>
         <input id="datepicker" class="form-control" aria-describedby="addon-date">
         <input id="dateinput" asp-for="Date" name="Date" class="form-control" aria-describedby="addon-date" hidden>
         <span asp-validation-for="Date" class="text-danger"></span>
     </div>
-</div>
+
 
