--- a/ExpensesControlApp/Views/Shared/_ExpenseInput.cshtml
+++ b/ExpensesControlApp/Views/Shared/_ExpenseInput.cshtml
@@ -1,19 +1,18 @@
 ﻿@model ExpensesControlApp.Models.Expense
-<div class="col-5">
+
     <div class="input-group">
-        <div class="col-3 input-group-prepend">
-            <span class="input-group-text" id="addon-name">Expense Name</span>
-        </div>
+            <div class="input-group-prepend w-25">
+                <span class="input-group-text w-100" id="addon-name">Name</span>
+            </div>
         <input asp-for="ExpenseName" name="ExpenseName" class="form-control" aria-describedby="addon-name">
         <span asp-validation-for="ExpenseName" class="text-danger"></span>
+
     </div>
-</div>
-<div class="col-5">
+
     <div class="input-group">
-        <div class="col-3 input-group-prepend">
-            <span class="input-group-text" id="addon-amount">Amount</span>
+        <div class="input-group-prepend w-25">
+            <span class="input-group-text w-100" id="addon-amount">Amount</span>
         </div>
         <input asp-for="Amount" name="Amount" class="form-control" aria-describedby="addon-amount">
         <span asp-validation-for="Amount" class="text-danger"></span>
     </div>
-</div>
