--- a/ExpensesControlApp/Views/ExpenseManager/Create.cshtml
+++ b/ExpensesControlApp/Views/ExpenseManager/Create.cshtml
@@ -3,28 +3,29 @@
 }
 
 @model ExpensesControlApp.Models.ExpenseEntry
-
-<form id="form" method="post">
-    <div class="border p-3 form-group">
-        <div class="row">
-            <h2 class="text-black-50 pl-3">Add Expense</h2>
-        </div>
-        <div class="d-flex flex-column align-items-center">
-            <partial name="_ExpenseInput" for=Expense />
-            <partial name="_DateInput" for=@Model />
-        </div>
-        <div class="d-flex justify-content-evenly text-center my-4">
-            <div class="col">
-                <input id="submit-create" type="submit" class="btn btn-outline-success w-50" asp-action="Create" value="Create" />
+<div class="container col-10">
+    <form id="form" method="post">
+        <div class="border p-3 form-group">
+            <div class="row">
+                <h2 class="text-black-50 pl-3">Add Expense</h2>
             </div>
-            <div class="col">
-                <a class="btn btn-outline-danger w-50" asp-action="Index">Cancel</a>
+            <div class="row">
+                <div class="d-flex flex-column align-items-center">
+                    <div class="col my-2">
+                        <partial name="_ExpenseInput" for=Expense />
+                        <partial name="_DateInput" for=@Model />
+                    </div>
+                    <div class="col">
+                    <input id="submit-create" type="submit" class="btn btn-outline-success m-2" asp-action="Create" value="Create" />
+
+                    <a class="btn btn-outline-danger m-2" asp-action="Index">Cancel</a>
+                    </div>
+                </div>
             </div>
+
         </div>
-
-
-    </div>
-</form>
+    </form>
+</div>
 @section MyScripts {
 <script>
     $(document).ready(function (){
