--- a/ExpensesControlApp/Views/LimitParam/Index.cshtml
+++ b/ExpensesControlApp/Views/LimitParam/Index.cshtml
@@ -17,10 +17,10 @@
                             <div class="input-group-prepend w-25">
                                 <span class="input-group-text w-100" id="addon-amount">Amount</span>
                             </div>
-                            <input asp-for="Amount" class="form-control" aria-describedby="addon-amount">
+                            <input asp-for="Amount" name="Amount" class="form-control" aria-describedby="addon-amount">
                             <span asp-validation-for="Amount" class="text-danger"></span>
                         </div>
-                        <partial name="_TimeSpanInput" for=TimeSpan />
+                        <partial name="_TimeSpanInput" for="TimeSpan" />
                     </div>
                     <div class="col">
                         <input id="submit" type="submit" class="btn btn-outline-success m-2" value="Save" />
