--- a/ExpensesControlApp/Views/RegularExpense/Create.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Create.cshtml
@@ -13,11 +13,11 @@
             <div class="row">
                 <div class="d-flex flex-column align-items-center">
                     <div class="col my-2">
-                        <partial name="_ExpenseInput" for=Expense />
-                        <partial name="_TimeSpanInput" for=TimeSpan />
+                        <partial name="_ExpenseInput" for="Expense"/>
+                        <partial name="_TimeSpanInput" for=TimeSpan/>
                     </div>
                     <div class="col">
-                        <input id="submit-create" type="submit" class="btn btn-outline-success m-2" asp-action="Create" value="Create" />
+                        <input id="submit" type="submit" class="btn btn-outline-success m-2" asp-action="Create" value="Create" />
 
                         <a class="btn btn-outline-danger m-2" asp-action="Index">Cancel</a>
                     </div>
