--- a/ExpensesControlApp/Views/RegularExpense/Update.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Update.cshtml
@@ -16,7 +16,7 @@
                 <div class="d-flex flex-column align-items-center">
                     <div class="col my-2">
                         <input asp-for="ExpenseId" hidden />
-                        <partial name="_ExpenseInput" for=Expense />
+                        <partial name="_ExpenseInput" for="Expense"/>
                         <partial name="_TimeSpanInput" for=TimeSpan />
                     </div>
                     <div class="col">
