--- a/ExpensesControlApp/Views/ExpenseManager/Update.cshtml
+++ b/ExpensesControlApp/Views/ExpenseManager/Update.cshtml
@@ -30,27 +30,10 @@
 @section MyScripts {
 <script>
 
-    $(document).ready(function(){
-        $("form").validate({
-         rules: {
-             ExpenseName: "required",
-             Amount: "required",
-             Date: "required"
-         },
-         messages: {
-             ExpenseName: "The name of the expense is required",
-             Amount: "The amount of the expense is required",
-             Date: "The date of the expense is required"
-         }
-     });
-         $("#datepicker").datepicker({
-             dateFormat: "dd.mm.yy",
-             firstDay: 1
-         });
-     });
-     $("#submit").click(function(){
-         let date = $("#datepicker").val().split(".").reverse().join("-");
-         $("#datepicker").val(date);
-     });
+
+
+        setUpDatePicker();
+
+    submitDatePicker();
 </script>
 }
