--- a/ExpensesControlApp/Views/Shared/_TimeSpanInput.cshtml
+++ b/ExpensesControlApp/Views/Shared/_TimeSpanInput.cshtml
@@ -5,10 +5,11 @@
         <div class="input-group-prepend w-25">
             <span class="input-group-text w-100" id="addon-timespan">Span</span>
         </div>
-        <input id="timespan-input" name="TimeSpan" class="form-control" aria-describedby="addon-timespan" hidden>
-        <input type="radio" name="timespan" class="@(Model == null || Model != TimeOption.Weekly? "checked" : "") btn-check" value="0" id="time-option1" autocomplete="off">
+        @*<input id="timespan-input" name="TimeSpan" class="form-control" aria-describedby="addon-timespan" hidden>*@
+        
+        <input type="radio" name="TimeSpan" class="btn-check" value="0" id="time-option1" autocomplete="off">
         <label class="btn btn-outline-secondary" for="time-option1">@TimeOption.Weekly</label>
-        <input type="radio" name="timespan" class="@(Model == null || Model != TimeOption.Monthly? "checked" : "") btn-check" value="1" id="time-option2" autocomplete="off">
+        <input type="radio" name="TimeSpan" class="btn-check" value="1" id="time-option2" autocomplete="off">
         <label class="btn btn-outline-secondary" for="time-option2">@TimeOption.Monthly</label>
 
     </div>
